package Sprites;

public enum BlockSprite {
    DAY,
    NIGHT,
};
