package Sprites;

public enum PlayerSprite {
    DEFAULT,
    ALT,
};
