package es.laberinto.modelo.bloques;

import es.laberinto.modelo.entides.Barca;
import es.laberinto.modelo.entides.Entidad;

public final class Agua extends Bloque {
    @Override
    public double velocidad() {
        return 1;
    }

    @Override
    public boolean puedeTransitar(Entidad entidad) {
        return entidad.getClass() == Barca.class;
    }

    public static Agua crear() {
        return new Agua();
    }
}
